@@ -154,6 +154,7 @@ public abstract class Serializer extends CoreObject {
 	 * 		<li>{@link Writer}
 	 * 		<li>{@link OutputStream} - Output will be written as UTF-8 encoded stream.
 	 * 		<li>{@link File} - Output will be written as system-default encoded stream.
+	 * 		<li>{@link StringBuilder} - Output will be written to the specified string builder.
 	 * 	</ul>
 	 * 	<br>Stream-based serializers can handle the following output class types:
 	 * 	<ul>
@@ -181,6 +182,7 @@ public abstract class Serializer extends CoreObject {
 	 * 		<li>{@link Writer}
 	 * 		<li>{@link OutputStream} - Output will be written as UTF-8 encoded stream.
 	 * 		<li>{@link File} - Output will be written as system-default encoded stream.
+	 * 		<li>{@link StringBuilder} - Output will be written to the specified string builder.
 	 * 	</ul>
 	 * 	<br>Stream-based serializers can handle the following output class types:
 	 * 	<ul>
@@ -222,6 +224,7 @@ public abstract class Serializer extends CoreObject {
 	 * 		<li>{@link Writer}
 	 * 		<li>{@link OutputStream} - Output will be written as UTF-8 encoded stream.
 	 * 		<li>{@link File} - Output will be written as system-default encoded stream.
+	 * 		<li>{@link StringBuilder} - Output will be written to the specified string builder.
 	 * 	</ul>
 	 * 	<br>Stream-based serializers can handle the following output class types:
 	 * 	<ul>
